# Calculus-Cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  calc.code-workspace  project_premake5.lua
bench/: CMakeLists.txt
examples/quickstart/: CMakeLists.txt  quickstart.cpp
include/: Calc.hpp  Calculus.h  Calculus_cpp.h  CompileTime.hpp  DataStructures.hpp  DataStructures.inl
include/parser/: Parser.hpp  Parser.inl
include/tnt/: tnt_cmat.h  tnt_vec.h
src/: CMakeLists.txt
src/Compiler/: ClientCompilerApp.rc  resource.h
src/Core/: CAlgebraParser.cpp  CHermitePolyFunction.cpp
src/Lemon/: lemon.c  lempar.c
src/samples/: makefile.unix  makefile.win
src/samples/cpp/CVS/: Entries  Repository  Root
tests/: CMakeLists.txt  DataStructures.cpp  test.cpp
